2005-08-19	Benedikt Meurer <benny@xfce.org>

	* python/Makefile.am: Fix indentation.
	* configure.in.in: Enable debugging by default when building from a
	  SVN sandbox. Disable debugging by default when building a release.
	* TODO: Remove obsolete items.
	* HACKING: Fix repository URLs and file names.
	* NEWS: Collect atleast the most important changes.
	* po/: Run 'gmake update-po'.

2005-08-19	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump the libtool revision number.

2005-08-19	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-xsession-client.c: Drop dependency on X11.
	  Acts as a dummy on other GDK targets.
	* configure.in.in, docs/reference/Makefile.am, exo/Makefile.am,
	  exo/exo-0.3.pc.in, exo/exo.h, python/Makefile.am, tests/Makefile.am:
	  Drop unnecessary dependency on libxfcegui4.

2005-08-18	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}, docs/reference/tmpl/exo-icon-view.sgml:
	  Import the new ExoIconView class, which provides a compatible
	  interface to the GtkIconView class in Gtk+ 2.8 (using cell
	  renderers instead of hardcoding the renderering in the icon
	  view). The icon view should be faster now, especially the
	  rubberband painting should be atleast twice as fast (given that
	  you don't use Gtk+ 2.8 with Cairo).
	* exo/exo-mime-database.{c,h}, exo/exo-mime-info.{c,h},
	  exo/xdgmime/, exo/Makefile.am, configure.in.in, exo/exo.h,
	  po/POTFILES.in: Remove the MIME database implementation, as
	  ThunarVFS contains a thread-safe replacement now.
	* configure.in.in, exo/, python/: Use ELF visibility if supported
	  by the compiler and the linker.
	* exo/: Fix several signedness warnings produced by gcc41.
	* python/: Remove the MIME implementation from the Python bindings
	  and add the new icon view methods.
	* po/libexo-0.3.pot: Ditch autogenerated file.
	* exo-csource/Makefile.am: Build the exo-csource tool on 'gmake
	  distcheck', as it's required to successfully 'gmake distcheck'
	  in tests/.
